fix: 코드 수정(IndexRepository, IndexService)